--- a/periodo2.html
+++ b/periodo2.html
@@ -9,7 +9,7 @@
 
 <div class="caja1"><center><h1>ENTREGAS PRIMER PERIODO</h1></center></div>
 <div class="entrega1" ><a href="http://mpaula.tonohost.com/entrega1/punto1/"><center><h1>ENTREGA 1</h1></a></div>
-<div class="entrega2" ><a href=""><center><h1>ENTREGA 2</h1></div>
+<div class="entrega2" ><a href="http://mandrea.tonohost.com/paula/index.php"><center><h1>ENTREGA 2</h1></div>
 <div class="entrega3" ><a href=""><center><h1>ENTREGA 3</h1></div>
 <div class="entrega4"><a href=""><center><h1>ENTREGA 4</h1></div>
 <div class="entrega5" ><a href=""><center><h1>ENTREGA 5</h1></div>
